# gitpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: index.hpp  main.hpp  object.hpp  repository.hpp  tree.hpp
src/: index.cpp  main.cpp  object.cpp  repository.cpp  tree.cpp
tests/: CMakeLists.txt  test_find_object.cpp  test_hash_object.cpp  test_init.cpp  test_read_object.cpp
